[tool.poetry]
name = "deephyper-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cellpose = {extras = ["gui"], version = "^2.2.3"}
deephyper = "^0.6.0"
numpy = "^1.26.2"
jupyterlab = "^4.0.9"
torchvision = "^0.16.1"
matplotlib = "^3.8.2"
albumentations = "^1.3.1"
opencv-python = "^4.8.1.78"
tifffile = "^2023.12.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
